--- a/pydcjs/snack-visualization/index.html
+++ b/pydcjs/snack-visualization/index.html
@@ -14,9 +14,9 @@
 	<!-- Plotting Area -->
 	<!--1. one-D categorical bar (location) - never use a Bar!
 		2. one-D categorical (or binned numerical) horizontal bar - for large value set (neighborhood)
-		3. one-D categorical vs time - stacked bar  (withwho vs hour)
+		3. one-D categorical vs time - stacked bar  (withwho vs date)
 		4. contigency table of categorical vs categorical - heatmap (location vs period occurances)
-		5. one-D numerical vs time (avg. healthlevel vs hour)
+		5. one-D numerical vs time (avg. healthlevel vs date)
 		6. two-D numerical scatter plot (latitude vs longitude - i know it is stupid) 
 		7. categorical vs two numerical : bubble chart - bubble(categorical), radius (group size), x (statics on a numerical), y (statistics on a numerical) - cost vs (latitude, longitude)
 		8. one categorical variable vs one numerical variable boxplot (healthlevel v.s. withwho) -->
@@ -38,6 +38,51 @@
 	d3.json("modified_snacks.json", function (err, data) {
 
 		var ndx = crossfilter(data);
+
+		// currently supported aggregation functions
+		var aggfuns = {
+			"avg": {
+				// reduce add
+				"add": function (feature) {
+					return function (p, v) {
+						p.result = (p.result*p.count + v[feature]) / (p.count + 1);
+						p.count += 1;
+						return p;
+					};
+				}
+				// reduce remove
+				, "remove": function (feature) {
+					return function (p, v) {
+						if (p.count === 1) {
+							p = {result: 0.0, count: 0};
+						} else {
+							p.result = (p.result*p.count - v[feature]) / (p.count - 1);
+							p.count -= 1;}
+						return p;
+					};
+				}
+				// reduce init
+				, "init": function (feature) {return function () {return {result: 0.0, count: 0};} }
+			}
+			, "sum": {
+				// reduce add
+				"add": function (feature) {
+					return function (p, v) {
+						p.result +=  v[feature];
+						return p;
+					};
+				}
+				// reduce remove
+				, "remove": function (feature) {
+					return function (p, v) {
+						p.result -=  v[feature];
+						return p;
+					};
+				}
+				// reduce init
+				, "init": function (feature) {return function () {return {result: 0.0};} }
+			}
+		};
 
 		var charts = {},
 			dims = {},
@@ -123,7 +168,6 @@
 		var feature_values = [];
 		ndx.dimension(function (d) {return d[options["#withwho-area-daily"].feature];})
 								.group().top(Infinity).forEach(function(kv){feature_values.push(kv.key);});
-		console.log(feature_values);
 		var select_stack = function (i) {return function(kv) {return (kv.value[i] || 0); } };
 		charts["#withwho-area-daily"]
 			.width(options["#withwho-area-daily"].width).height(options["#withwho-area-daily"].height)
@@ -142,6 +186,42 @@
 		}
 
 		// chart 4 - location period heatmap
+
+
+		// chart 5 - health level time series 
+		options["#healthlevel-daily"] = {
+			anchor: "#healthlevel-daily"
+			, timefeature: "date"
+			, feature: "healthlevel"
+			, aggfun: "avg" // supported by the aggfuns defined at the top
+			, width: 600
+			, height: 400
+			, xAxisLabel: "Daily"
+			, yAxisLabel: "Avg healthlevel daily"
+		};
+		charts["#healthlevel-daily"] = dc.lineChart(options["#healthlevel-daily"].anchor);
+		dims["#healthlevel-daily"] = ndx.dimension(function (d) {
+			return new Date(d[options["#healthlevel-daily"].timefeature]); 
+		});
+		var minDate = new Date(dims["#healthlevel-daily"].bottom(1)[0][options["#healthlevel-daily"].timefeature]);
+		var maxDate = new Date(dims["#healthlevel-daily"].top(1)[0][options["#healthlevel-daily"].timefeature]);
+		groups["#healthlevel-daily"] = dims["#healthlevel-daily"].group().reduce(
+			// reduce add
+			aggfuns[options["#healthlevel-daily"].aggfun].add(options["#healthlevel-daily"].feature)
+			// reduce remove
+			, aggfuns[options["#healthlevel-daily"].aggfun].remove(options["#healthlevel-daily"].feature)
+			// reduce init
+			, aggfuns[options["#healthlevel-daily"].aggfun].init(options["#healthlevel-daily"].feature)
+		);
+		charts["#healthlevel-daily"]
+			.width(options["#healthlevel-daily"].width).height(options["#healthlevel-daily"].height)
+			.dimension(dims["#healthlevel-daily"])
+			.group(groups["#healthlevel-daily"])
+			.valueAccessor(function (kv) {return kv.value.result || 0;})
+			.x(d3.time.scale().domain([minDate, maxDate]))
+			.elasticY(true)
+			.xAxisLabel(options["#healthlevel-daily"].xAxisLabel)
+			.yAxisLabel(options["#healthlevel-daily"].yAxisLabel);
 		
 		dc.renderAll();
 	});
