Change colorRangeScheme with darker starting colors

--- a/pydcjs/snack-visualization/index_wx.html
+++ b/pydcjs/snack-visualization/index_wx.html
@@ -245,18 +245,17 @@
 
 		// color scheme for heatmap, obtained from http://colorbrewer2.org/
 		var colorRangeScheme = {
-			green: ["#e5f5e0", "#00441b"],
-			organge: ["#fee6ce", "#7f2704"],
-			purple: ["#efedf5", "#3f007d"],
-			red: ["#fee0d2", "#67000d"],
-			blue: ["#deebf7", "#08306b"],
-			grey: ["#f0f0f0", "#000000"],
+			green: ["#c7e9c0", "#00441b"],
+			organge: ["#fdd0a2", "#7f2704"],
+			purple: ["#dadaeb", "#3f007d"],
+			red: ["#fcbba1", "#67000d"],
+			blue: ["#c6dbef", "#08306b"],
 			yor: ["#ffffcc", "#800026"],
-			bg: ["#e5f5f9", "#00441b"],
+			bg: ["#ccece6", "#00441b"],
 			yg: ["#f7fcb9", "#004529"],
 			yob: ["#fff7bc", "#662506"],
 			or: ["#fee8c8", "#7f0000"],
-			pb: ["#ece7f2", "#023858"]
+			pb: ["#d0d1e6", "#023858"]
 		};
 
 		options["#location-period-hm"] = {
